samples/errors/001-error.ooc

main: func {

    a = 3
    
}
